# Entity-Component-System.py

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
src/ecs/: __init__.py  _component.py  _world.py
tests/: entity_creation_test.py
