[tool.poetry]
name = "ecs"
version = "0.1.0"
description = ""
authors = ["Mikel <email@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
nox = "^2021.6.12"
black = "^21.7b0"
mypy = "^0.910"
bandit = "^1.7.0"

flake8 = "~=3.9"
flake8-annotations = "~=2.6"
flake8-docstrings = "~=1.6"
flake8-isort = "~=4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
